# superbot

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  apply_migrations.py  backlog.md  check_tables.py  project_description.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  reset_db.py  setup.py  update_status.sh  update_timestamps.sh
.github/workflows/: python-app.yml
migrations/: create_chat_stats.sql  update_message_context_relation.sql  update_message_timestamp.sql
migrations/legacy/: README.md  add_message_id_to_context.sql
prompts/: FEATURE-002_daily_digest.txt  FEATURE-010_classify.txt  FEATURE-010_digest_business.txt  FEATURE-010_digest_mixed.txt  FEATURE-010_digest_private.txt  README.md  TECH-001_chat_summary.txt  TECH-001_generate_response.txt  TECH-001_message_analysis.txt  TECH-001_message_importance.txt  TECH-001_style_guide.txt  TECH-001_thread_summary.txt  TECH-001_topics.txt
scripts/: apply_migrations.sh
src/: alembic.ini  check_db.py  config.py  lock.py  main.py  middleware.py  scheduler.py
src/database/: config.py  database.py  init_db.py  models.py  reset_db.py
src/database/migrations/: add_is_silent_column.py  env.py  run_migrations.py  update_chat_id_to_bigint.py
src/database/migrations/versions/: 20250403_1840_41548e099c5f_initial.py  20250404_1107_2aec5090bdd8_add_last_summary_timestamp_to_chats_.py  (+18 more)
src/handlers/: business_handler.py  callback_handler.py  chat_handler.py  command_handler.py  message_handler.py
src/models/: context.py
src/services/: cleanup_service.py  context_service.py  digest_service.py  md.py  notification_service.py  openai_service.py  prompts.py  stats_service.py
tests/: conftest.py  test_business_handler.py  test_cleanup_service.py  test_command_handler.py  test_context_service.py  test_digest_service.py  test_md.py  test_message_handler.py  test_notification_service.py  test_prompts.py
