[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superbot"
version = "0.2.0"
description = "Telegram bot that imitates Valentin's communication style"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0,<4.0.0",
    "SQLAlchemy>=2.0.23,<3.0.0",
    "asyncpg>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.1",
    "openai>=1.0.0",
    "emoji>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "greenlet>=3.1.1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = false
follow_imports = "silent"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [".venv", "venv", "build", "dist", "src/database/migrations/versions"]
